# aerpawlib

./: README.md  ROADMAP.md  pyproject.toml  pytest.ini  setup.py
aerpawlib/: __init__.py  __main__.py  aerpaw.py  external.py  runner.py  safetyChecker.py  sitl.py  util.py  vehicle.py  zmqutil.py
aerpawlib/legacy/: __init__.py  aerpaw.py  external.py  runner.py  safetyChecker.py  util.py  vehicle.py  zmqutil.py
aerpawlib/tests/: README.md  __init__.py  conftest.py  test_api_compatibility.py
aerpawlib/tests/legacy/: __init__.py  test_runner.py  test_util.py
aerpawlib/tests/v1/: __init__.py  test_runner.py  test_util.py
aerpawlib/tests/v2/: __init__.py  test_exceptions.py  test_runner.py  test_safety.py  test_types.py  test_vehicle.py
aerpawlib/v1/: __init__.py  aerpaw.py  constants.py  exceptions.py  external.py  helpers.py  log.py  runner.py  safety.py  safetyChecker.py  util.py  vehicle.py  zmqutil.py
aerpawlib/v1/vehicles/: core_vehicle.py  drone.py  rover.py
aerpawlib/v2/: __init__.py  aerpaw.py  exceptions.py  external.py  geofence.py  logging.py  protocols.py  runner.py  safety.py  safety_checker.py  testing.py  types.py  vehicle.py  zmqutil.py
aerpawlib/v2/safety/: __init__.py  checker.py  connection.py  limits.py  monitor.py  types.py  validation.py
aerpawlib/v2/vehicle/: base.py  drone.py  rover.py  state.py
docs/: DEVELOPMENT.md  README.md  ROADMAP.md  USER_GUIDE.md
docs/legacy/: README.md  safety_checker.md
docs/v1/: README.md  safety_checker.md
docs/v2/: README.md  logging.md  safety.md
examples/: README.md
examples/legacy/: external_runner.py  hide_rover.py  preplanned_trajectory.py
examples/legacy/zmq_preplanned_orbit/: drone_orbiter.py  drone_tracer.py  ground_coordinator.py
examples/legacy/zmq_runner/: follower.py  leader.py
examples/v1/: basic_example.py
examples/v2/: at_init_example.py  basic_example.py  command_handle_cancel_example.py  command_handle_example.py  dummy_vehicle_example.py  enhanced_example.py  geofence.kml  geofence_example.py  logging_example.py  rover_example.py  state_machine_example.py  velocity_example.py
scripts/: setup_sitl.py
tests/: README.md  conftest.py
tests/configs/: testv1.json  testv12.json
tests/integration/: test_drone_sitl.py  test_v1_drone.py  test_v1_rover.py  test_v2_drone.py  test_v2_rover.py  test_v2_safety.py  test_v2_state_machine.py  test_v2_vehicle_task_cancel.py  test_v2_velocity.py
tests/unit/: test_v1_exceptions.py  test_v1_external.py  test_v1_helpers.py  test_v1_runner.py  test_v1_util.py  test_v1_vehicle.py  test_v2_exceptions.py  test_v2_geofence.py  test_v2_runner.py  test_v2_testing.py  test_v2_types.py
