[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aerpawlib"
version = "1.0.0-beta-3"
description = "Tools and frameworks for writing AERPAW scripts"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "John Kesler", email = "jckesle2@ncsu.edu"},
    {name = "Julian Reder", email = "jjreder@ncsu.edu"},
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["aerpaw", "drone", "uav", "mavsdk", "vehicle", "control"]

dependencies = [
    # Core dependencies (used by all versions)
    "pyzmq>=25.0.0",
    "pykml>=0.2.0",
    "shapely>=2.0.0",
    # V2 dependencies (MAVSDK-based, default)
    "mavsdk>=2.0.0",
    "aiohttp>=3.12.14",
    "dronekit>=2.9.2",
    "pymavlink>=2.4.0",
    "pyserial>=3.5",
    "requests>=2.32.4",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "psutil>=5.9.0",
]
all = [
    "aerpawlib[dev]",
]

[project.urls]
Homepage = "https://github.com/quantumbagel/aerpawlib"
Repository = "https://github.com/quantumbagel/aerpawlib"
Documentation = "https://github.com/quantumbagel/aerpawlib#readme"
"Bug Tracker" = "https://github.com/quantumbagel/aerpawlib/issues"

[project.scripts]
aerpawlib = "aerpawlib.__main__:main"

[tool.setuptools.packages.find]
include = ["aerpawlib*"]

[tool.setuptools.package-data]
aerpawlib = ["*.yaml", "*.kml", "*.plan"]

[tool.black]
line-length = 79
target-version = ["py39", "py310", "py311", "py312", "py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''


[tool.coverage.run]
source = ["aerpawlib"]
omit = ["*/test/*", "*/__pycache__/*"]

